--- a/primary/overlaystub/res/values/strings.xml
+++ b/primary/overlaystub/res/values/strings.xml
@@ -21,11 +21,11 @@
     <!-- DEFAULT VALUES HAHA YES, maybe switch to an actual overlay later? -->
     <string name="theme_name_default">Default</string>
     <string name="theme_title_default">@string/theme_name_default</string>
-    <string name="theme_wallpaper_title_default">Default AOSiP Wallpaper</string>
+    <string name="theme_wallpaper_title_default">Default Underp Wallpaper</string>
     <string name="theme_wallpaper_attribution_default">Meh</string>
 
     <!-- Values to declare accents, there aren't themes. -->
-    <string name="theme_name_kronicgreen">KronicGreen</string>
+    <string name="theme_name_kronicgreen">UnDerpGreen</string>
     <string name="theme_title_kronicgreen">@string/theme_name_kronicgreen</string>
     <string name="theme_overlay_color_kronicgreen">com.accents.aospagreen</string>
     <string name="theme_overlay_font_kronicgreen">com.android.theme.font.googlesans</string>
@@ -35,7 +35,7 @@
     <string name="theme_overlay_icon_settings_kronicgreen">com.android.theme.icon_pack.circular.settings</string>
     <string name="theme_overlay_icon_sysui_kronicgreen">com.android.theme.icon_pack.circular.systemui</string>
     <string name="theme_overlay_shape_kronicgreen">com.android.theme.icon.squircle</string>
-    <string name="theme_wallpaper_title_kronicgreen">Kronic Bomb</string>
-    <string name="theme_wallpaper_attribution_kronicgreen">AOSiP</string>
+    <string name="theme_wallpaper_title_kronicgreen">UnDerp Bomb</string>
+    <string name="theme_wallpaper_attribution_kronicgreen">UnDerp</string>
 
 </resources>
